--- a/client/components/App/App.module.css
+++ b/client/components/App/App.module.css
@@ -39,6 +39,11 @@
   margin-left: 15px;
 }
 
+.button:hover {
+  background-color: rgb(102, 102, 102);
+  border-color: rgb(102, 102, 102);
+}
+
 @media screen and (max-width: 700px) {
   .columns, .buttons {
     flex-direction: column;
