Optimized code to create more DRY code

--- a/client/components/CellarWine/CellarWine.module.css
+++ b/client/components/CellarWine/CellarWine.module.css
@@ -2,7 +2,8 @@
   width: 215px;
   margin-left: 20px;
   text-align: center;
-  transition: border 2s;
+  transition: border 0.5s;
+  border: 1px solid white;
 }
 
 .image {
