--- a/client/components/App/App.module.css
+++ b/client/components/App/App.module.css
@@ -40,12 +40,16 @@
 }
 
 .button:hover {
-  background-color: rgb(102, 102, 102);
-  border-color: rgb(102, 102, 102);
+  background-color: rgb(146, 145, 145);
+  border-color: rgb(146, 145, 145);
 }
 
 @media screen and (max-width: 700px) {
   .columns, .buttons {
     flex-direction: column;
+  }
+  .button {
+    margin-top: -20px;
+    margin-bottom: 15px;
   }
 }
